--- a/src/app/profile/password-form/password-form.component.html
+++ b/src/app/profile/password-form/password-form.component.html
@@ -1,5 +1,5 @@
 
-<form *ngIf="passwordForm" [formGroup]="passwordForm" class="form-container" fxLayout="column">
+<form *ngIf="passwordForm" [formGroup]="passwordForm" class="app-form" fxLayout="column">
   <span class="form-header">Endre passord</span>
   <mat-form-field>
       <input matInput placeholder="Nåværende passord"  type="password" formControlName="oldPassword">
