--- a/src/app/timesheet/timesheet-week-list/timesheet-mission-bar/timesheet-mission-bar.component.html
+++ b/src/app/timesheet/timesheet-week-list/timesheet-mission-bar/timesheet-mission-bar.component.html
@@ -9,7 +9,7 @@
         'bg-warn': timesheet.status == 0,
         'width-handset': true
     }"
-    (click)="openDialog()" matRipple>
+    (click)="clickBar()" matRipple>
 
     <span class="mat-body-strong">
         {{ timesheet.totalHours }}t
