--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -2,7 +2,7 @@
 <mat-tab-group mat-stretch-tabs>
 
     <mat-tab label="Profil">
-      <app-profile-form
+      <app-profile-form class="tab-container"
           *ngIf="user"
           [user]="user"
           (profileUpdated)="updateProfile($event)">
@@ -10,14 +10,14 @@
     </mat-tab>
 
     <mat-tab label="Passord">
-      <app-password-form
+      <app-password-form class="tab-container"
           [error]="passwordStatus"
           (passwordUpdated)="updatePassword($event)">
       </app-password-form>
     </mat-tab>
 
     <mat-tab label="Annet">
-      <div class="card-container">
+      <div class="tab-container">
         <mat-nav-list>
           <app-nav-list-item (click)="confirmPurge()"
             [config]="{
