--- a/src/app/data-management/data-manager/data-manager.component.scss
+++ b/src/app/data-management/data-manager/data-manager.component.scss
@@ -2,12 +2,15 @@
 
 $select-height: 59.5;
 
-.data-picker .mat-form-field-flex{
-  height:$select-height * 1px!important;
-}
+.data-picker{
+  background:white; 
+  .mat-form-field-flex{
+    height:$select-height * 1px!important;
+  }
 
-.data-picker .mat-form-field-wrapper{
-  margin-bottom: -1.25em!important;
+  .mat-form-field-wrapper{
+    margin-bottom: -1.25em!important;
+  }
 }
 
 .data-container{
