--- a/src/app/employer/employer-list/employer-list.component.html
+++ b/src/app/employer/employer-list/employer-list.component.html
@@ -1,6 +1,6 @@
 <div class="static-page-container" fxLayout="column" fxLayoutGap="8px">
 
-    <div  fxFlex="10" class="content-header">
+    <div  fxFlex="10" class="content-header ml-2">
       <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
         <span>Oppdragsgivere</span>
         <button (click)="createEmployer()" color="primary" *ifRole="[Roles.Leder, Roles.Mellomleder]"
