--- a/src/app/profile/password-form/password-form.component.html
+++ b/src/app/profile/password-form/password-form.component.html
@@ -1,6 +1,6 @@
 
 <form *ngIf="passwordForm" [formGroup]="passwordForm" class="app-form" fxLayout="column">
-  <span class="form-header">Endre passord</span>
+  <span class="mb-1">Endre passord</span>
   <mat-form-field>
       <input matInput placeholder="Nåværende passord"  type="password" formControlName="oldPassword">
   </mat-form-field>
