--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -1,5 +1,5 @@
 
-<mat-tab-group mat-stretch-tabs>
+<mat-tab-group mat-stretch-tabs color="accent">
 
     <mat-tab label="Profil">
       <app-profile-form class="tab-container"
