--- a/src/app/timesheet-statistic/timesheet-statistic/timesheet-statistic-table/timesheet-statistic-table.component.html
+++ b/src/app/timesheet-statistic/timesheet-statistic/timesheet-statistic-table/timesheet-statistic-table.component.html
@@ -1,5 +1,5 @@
 <ag-grid-angular #dataGrid
-    class="ag-theme-balham-dark table-height"
+    class="ag-theme-balham table-height"
     rowSelection="multiple"
     suppressRowClickSelection="true"
     suppressColumnVirtualisation="true"
