--- a/src/app/timesheet/timesheet-form/timesheet-form.component.html
+++ b/src/app/timesheet/timesheet-form/timesheet-form.component.html
@@ -1,5 +1,5 @@
 <div class="form-container" fxLayout="column" fxLayoutAlign="start stretch">
-  <span class="form-header">Legg til timer</span>
+  <span class="content-header mb-1">Legg til timer</span>
 
   <mat-form-field>
     <input [disabled]="missionDisabled ? '' : null" matInput placeholder="Oppdrag" aria-label="Velg oppdrag" [matAutocomplete]="auto1" [(ngModel)]="mission">
