--- a/src/app/timesheet/timesheet-week-list/timesheet-day-label/timesheet-day-label.component.scss
+++ b/src/app/timesheet/timesheet-week-list/timesheet-day-label/timesheet-day-label.component.scss
@@ -5,11 +5,7 @@
 }
 
 .static-section{
-  background:$bg-app-bar;
   width:100%;
   padding-top:$content-margin*1px;
-}
-
-.highlighted{
-  border: 1px dashed $primary;
+  //border-bottom:1px dashed $primary;
 }
