--- a/src/app/mission/mission-list/mission-list.component.html
+++ b/src/app/mission/mission-list/mission-list.component.html
@@ -1,19 +1,17 @@
 
-<div class="static-page-container" fxLayout="column" fxLayoutGap="8px">
+<div  fxLayout="column">
 
     <div  fxFlex="10" class="content-header">
       <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
-        <span>Oppdrag</span>
-        <button (click)="createMission()" color="primary" *ifRole="[Roles.Leder, Roles.Mellomleder]"
-          mat-icon-button aria-label="ny">
+        <span class="ml-2">Oppdragsliste</span>
+        <button (click)="createMission()" *ifRole="[Roles.Leder, Roles.Mellomleder]"
+          mat-icon-button aria-label="ny" color="accent">
           <mat-icon class="icon_125">add</mat-icon>
         </button>
       </div>
     </div>
 
-    <mat-divider></mat-divider>
-
-    <div class="static-page-content" fxFlex>
+    <div>
       <app-mission-list-view [missions]="missions$ | async"></app-mission-list-view>
     </div>
 
