--- a/src/app/profile/profile-form/profile-form.component.html
+++ b/src/app/profile/profile-form/profile-form.component.html
@@ -1,6 +1,6 @@
 
 <form *ngIf="profileForm && user" [formGroup]="profileForm" class="app-form" fxLayout="column">
-  <span class="form-header">Endre profil</span>
+  <span class="mb-1">Endre profil</span>
     <mat-form-field>
       <input matInput placeholder="Brukernavn" formControlName="userName" >
     </mat-form-field>
