--- a/src/app/shared/layout/main-nav/bottom-nav/bottom-nav.component.html
+++ b/src/app/shared/layout/main-nav/bottom-nav/bottom-nav.component.html
@@ -1,27 +1,27 @@
-<mat-toolbar class="bottom_toolbar p-0 mat-elevation-z8">
+<mat-toolbar class="bottom_toolbar p-0 mat-elevation-z4">
 
-        <button [routerLink]="['/hjem']" [routerLinkActive]="['active-icon']"
+        <button [routerLink]="['/hjem']" [routerLinkActive]="['active']"
         class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
 
           <mat-icon>home</mat-icon>
 
         </button>
 
-        <button [routerLink]="['/oppdrag']" [routerLinkActive]="['active-icon']"
+        <button [routerLink]="['/oppdrag']" [routerLinkActive]="['active']"
           class="bottom_toolbar_button" mat-icon-button aria-label="Gå til oppdrag">
 
           <mat-icon>view_list</mat-icon>
 
         </button>
 
-        <button *ifRole="[Roles.Ansatt]" [routerLink]="['/profil']" [routerLinkActive]="['active-icon']"
+        <button *ifRole="[Roles.Ansatt]" [routerLink]="['/profil']" [routerLinkActive]="['active']"
             class="bottom_toolbar_button" mat-icon-button aria-label="Gå til profil">
 
             <mat-icon>person</mat-icon>
 
         </button>
 
-        <button *ifRole="[Roles.Leder, Roles.Mellomleder]" [routerLink]="['/timer']" [routerLinkActive]="['active-icon']"
+        <button *ifRole="[Roles.Leder, Roles.Mellomleder]" [routerLink]="['/timer']" [routerLinkActive]="['active']"
             class="bottom_toolbar_button" mat-icon-button aria-label="Gå til timeliste">
 
             <mat-icon matBadgeColor="warn" matBadgeSize="small" 
