--- a/src/app/shared/layout/main-nav/main-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-nav.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container ngClass.xs="toolbar-padding">
 
-  <mat-sidenav fixedInViewport #drawer class="mat-elevation-z8" 
+  <mat-sidenav fixedInViewport #drawer class="mat-elevation-z4" 
     [attr.role]="(isXs$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isXs$ | async) ? 'over' : 'side'"
     [opened]="(isXs$ | async) === false">
@@ -8,14 +8,16 @@
     <mat-toolbar fxLayout="column" fxLayoutAlign="center start" style="line-height:1.3">
 
       <span
-        [ngClass]="(conSub$ | async) ? 'color-green' : 'color-warn'">
+        [ngClass]="(conSub$ | async) ? 'color-success' : 'color-warn'">
         {{ (conSub$ | async) ? 'Tilkoblet internett' : 'Frakoblet internett' }}
       </span>
 
       <span *ngIf="currentUser$ | async; let user">{{ user.firstName }} {{ user.lastName }}</span>
 
     </mat-toolbar>
+    
     <mat-divider></mat-divider>
+
     <mat-nav-list>
       <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/hjem']" [routerLinkActive]="['active']">
         <mat-icon mat-list-icon>home</mat-icon>
@@ -26,7 +28,9 @@
         <mat-icon mat-list-icon>view_list</mat-icon>
         <p mat-line>Oppdrag</p>
       </a>
+
       <mat-divider class="mid-divider"></mat-divider>
+
       <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/timer']" [routerLinkActive]="['active']">
         <mat-icon mat-list-icon>timer</mat-icon>
         <p mat-line>Timeliste</p>
@@ -51,7 +55,8 @@
       </ng-container>
 
       <mat-divider></mat-divider>
-      <span style="position: absolute;bottom:0;width:100%;">
+
+      <span class="bottom-list">
         <mat-divider></mat-divider>
         <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/profil']" [routerLinkActive]="['active']">
           <mat-icon mat-list-icon>person</mat-icon>
@@ -63,14 +68,15 @@
           <p mat-line>Logg ut</p>
         </a>
       </span>
+
     </mat-nav-list>
 
   </mat-sidenav>
 
   <mat-sidenav-content *ngIf="config$ | async; let config">
 
-    <mat-toolbar class="mat-elevation-z8" 
-      [ngClass]="{'alt_nav': config.altNav, 'main_nav': !config.altNav, 'mat-elevation-z8': config.elevationEnabled}">
+    <mat-toolbar class="mat-elevation-z4" 
+      [ngClass]="{'alt_nav': config.altNav, 'main_nav': !config.altNav, 'mat-elevation-z4': config.elevationEnabled}">
 
       <mat-toolbar-row class="p-0">
         <ng-container *ngIf="!config.altNav else altNav">
@@ -117,7 +123,7 @@
 
         <button mat-icon-button aria-label="Åpne timeliste" 
           *ngFor="let button of config.buttons" 
-          [color]="button.color"
+          [color]="button.color || 'white'"
           (click)="handleFn(button.callback)">
             <mat-icon>{{ button.icon }}</mat-icon>
         </button>
